# emulation/restapi/operations/tokenomics/complete_cycle_responses.go
@@ -1,0 +1,59 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package tokenomics
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"emulation/models"
+)
+
+// CompleteCycleOKCode is the HTTP code returned for type CompleteCycleOK
+const CompleteCycleOKCode int = 200
+
+/*
+CompleteCycleOK OK
+
+swagger:response completeCycleOK
+*/
+type CompleteCycleOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.CycleResult `json:"body,omitempty"`
+}
+
+// NewCompleteCycleOK creates CompleteCycleOK with default headers values
+func NewCompleteCycleOK() *CompleteCycleOK {
+
+	return &CompleteCycleOK{}
+}
+
+// WithPayload adds the payload to the complete cycle o k response
+func (o *CompleteCycleOK) WithPayload(payload *models.CycleResult) *CompleteCycleOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the complete cycle o k response
+func (o *CompleteCycleOK) SetPayload(payload *models.CycleResult) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CompleteCycleOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
